--- a/titlebar.html
+++ b/titlebar.html
@@ -44,7 +44,7 @@
     font-weight: bold;
     text-align: left;
     padding: 10px 20px;
-    min-width: 500px !important;
+    width: 600px !important;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     position: relative;
