--- a/titlebar.html
+++ b/titlebar.html
@@ -44,7 +44,8 @@
     font-weight: bold;
     text-align: left;
     padding: 10px 20px;
-    width: 600px !important;
+    min-width: 760px !important;
+    width: 760px;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     position: relative;
