cool bug games initial commit

--- a/about.html
+++ b/about.html
@@ -288,7 +288,7 @@
       >Suggest a Game</a
     ><br /><br />
     Emails: <br>
-    <img src="/images/more/contact.png" width="200vw"><br><br><a>Find out More in the </a><a
+<p style="font-size: 150%;">coolbug.inc@gmail.com</p><a>Find out More in the </a><a
       style="text-decoration: underline !important; color: #3c3c3c"
       href="/privacy.html"
       >Privacy Policy</a
