--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="apple-touch-icon" sizes="48x48" href="/favicon.ico" />
   <meta property="og:image" content="/logo.png" />
   <meta property="og:url" content="https://coolubg.github.io/" />
-  <meta property="og:site_name" content="Cool Unblocked Games" />
+  <meta property="og:site_name" content="Skibidi Games Unblocked" />
   <meta name="theme-color" content="#58aafc" />
   <meta name="google-site-verification" content="Q-GasTm6p0RsCSA7j-x1U7mX_Cz6ItjUz8q3bzM6YYo" />
   <link rel="stylesheet" type="text/css" href="/games.css">
@@ -17,7 +17,7 @@
   <meta property="og:description"
     content="Explore Cool, Free, Unblocked Games. Run 3, Learn to Fly 2, Slope, Jacksmith, Tanuki Sunset, Moto X3M, Jelly Truck" />
   <meta name="description"
-    content="Explore Cool, Free, Unblocked Games at Cool Unblocked Games / CoolUBG. Play games at school, work, home, on any internet connection" />
+    content="Explore Cool, Free, Unblocked Games at Skibidi Games Unblocked. Play games at school, work, home, on any internet connection" />
   <meta name="author" content="CiscoHA on github" />
 
   <script src="/analytics.js" async></script>
