--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Skibidi Games Unblocked</title>
+  <title>Caterpillar Unblocked Games</title>
   <meta name="google-adsense-account" content="ca-pub-4293684626558852" />
   <link rel="icon" type="image/x-icon" sizes="48x48" href="/favicon.ico" />
   <link rel="icon" type="shortcut icon" sizes="48x48" href="/favicon.ico" />
